# yt_audio_collector

./: .buildinfo  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  example.ipynb  genindex.html  index.html  install.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  yt_audio_collector.system_1.html  yt_audio_collector.system_2.html  yt_audio_collector.utils.html
.doctrees/: Quickstart.doctree  environment.pickle  index.doctree  install.doctree  modules.doctree  yt_audio_collector.doctree  yt_audio_collector.system_1.doctree  yt_audio_collector.system_2.doctree  yt_audio_collector.utils.doctree
.github/workflows/: docs_pages.yml  sphinx.yml
_modules/: index.html
_modules/yt_audio_collector/system_1/: fetch_youtube_data.html  valid_transcript.html  video_to_audio.html
_modules/yt_audio_collector/system_2/: preprocess_audio.html
_modules/yt_audio_collector/utils/: file_utils.html
_sources/: install.rst.txt  yt_audio_collector.system_2.rst.txt
audio/finance_in_hindi/: finance_in_hindi.json
docs/: Quickstart.html  Quickstart.rst  conf.py  index.rst  install.rst  modules.rst  requirements.txt  yt_audio_collector.html  yt_audio_collector.rst  yt_audio_collector.system_1.rst  yt_audio_collector.system_2.html  yt_audio_collector.system_2.rst  yt_audio_collector.utils.rst
docs/_build/doctrees/: Quickstart.doctree  environment.pickle  index.doctree  install.doctree  modules.doctree  (+4 more)
src/yt_audio_collector/: constants.py
test/: test_preprocess_audio.py
tests/: test_fetch_youtube_data.py  test_preprocess_audio.py  test_valid_transcription.py  test_video_to_audio.py
yt_audio_collector/: __init__.py
yt_audio_collector/system_1/: fetch_youtube_data.py  valid_transcript.py  video_to_audio.py
yt_audio_collector/system_2/: preprocess_audio.py
yt_audio_collector/utils/: file_utils.py  format.sh  lint.sh
(+38 files in other folders)
